correcting team member names, fixing about section alignment, text and file link

--- a/comets/css/comets.css
+++ b/comets/css/comets.css
@@ -213,7 +213,7 @@ label[for="showMetabolites"] div {
 #toc {
     float: left;
 }
-#about,
+
 #flowchart {
     overflow: hidden;
 }
